deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: mycontainer
        image: upendra9010/hockton:appimage
        ports:
        - containerPort: 80

        #configmap-attached
        resources:
          requests:
            cpu: "2"
            memory: 2Gi
          limits:
            cpu: "4"
            memory: 4Gi

        #livenessProbe-attached
        livenessProbe:
          httpGet:
            path: /
            port: 80  
          initialDelaySeconds: 30
          periodSeconds: 5

        #readinessProbe-attached
        readinessProbe:
          httpGet:  
            path: /
            port: 80
          initialDelaySeconds: 10  
          periodSeconds: 5
