statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: dbcontainer
        image: upendra9010/hockton:dbimage
        ports:
        - containerPort: 80

        #secret-attached
        envfrom:
          - secretRef:
              name: mysecret

        volumesMounts:
          - name: dbvolume
              mountPath: /usr/share/nginx/html

        volumeClaimTemplates:
          - metadata:
              name: dbvolume
            spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                requests:
                  storage: 2Gi
