serviceapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
   type: ClusterIP
   selector:
     app: myapp
   ports:
   - port: 80
     targetPort: 80
