ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: myingress
  annotations:nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myservice
            port:
              number: 80
