networkpolices.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: myntp
spec:
  podSelector:
    matchLabels:
      role: myapp
  policyTypes:
  - Ingress
  - Egress  
  
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx 
    ports:
    - protocol: TCP
      port: 80

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mysql  
    ports:
    - protocol: TCP
      port: 3306
    
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      ports:
      - protocol: UDP
        port: 53
